[package]
name = "dns_enumerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = "0.6.0"
async-std-resolver = "0.22.0"
tokio-test = "0.4.2"
trust-dns-resolver = "0.22.0"
rustdns = "0.4.0"
google-dns-rs = "0.3.0"